--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -49,7 +49,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintVertical_bias="0.19" />
 
-    <com.facebook.share.widget.ShareButton
+    <Button
         android:id="@+id/share_button"
         android:layout_width="82dp"
         android:layout_height="40dp"
@@ -61,7 +61,9 @@
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/newLevel"
         android:visibility="gone"
+        android:text="Share on Google+"
         app:layout_constraintHorizontal_bias="0.33" />
+
 
     <ImageButton
         android:id="@+id/Continue"
