--- a/app/src/main/res/layout/info_dialog.xml
+++ b/app/src/main/res/layout/info_dialog.xml
@@ -15,12 +15,12 @@
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
-        android:layout_height="150dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginBottom="232dp"
         app:layout_constraintVertical_bias="0.0"
-        android:id="@+id/scroll">
+        android:id="@+id/scroll"
+        android:layout_height="225dp">
 
         <LinearLayout
             android:layout_width="match_parent"
