--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,7 +97,7 @@
     <ListView
         app:layout_constraintRight_toLeftOf="@+id/play"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         android:id="@+id/list"
         app:layout_constraintBottom_toTopOf="@+id/about"
         android:layout_height="0dp"
@@ -106,25 +106,40 @@
         android:padding="3dp"
         android:smoothScrollbar="true"
         app:layout_constraintTop_toBottomOf="@+id/button"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="1.0"
         android:visibility="gone"/>
 
     <Button
         android:text="Show Scoreboard"
-        android:layout_width="wrap_content"
+        android:layout_width="137dp"
         android:layout_height="wrap_content"
         android:id="@+id/button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="88dp"
+        android:background="@drawable/curve_shape"
+        android:enabled="false"
+        app:layout_constraintTop_toBottomOf="@+id/show_achievements"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="@+id/list"
+        app:layout_constraintHorizontal_bias="0.0" />
+
+    <Button
+        android:id="@+id/show_achievements"
+        android:layout_width="137dp"
+        android:layout_height="wrap_content"
+        android:text="Achievements"
+        android:background="@drawable/curve_shape"
+        android:enabled="false"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/topScore"
         app:layout_constraintRight_toLeftOf="@+id/themes"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/topScore"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
         app:layout_constraintVertical_bias="0.0"
-        android:background="@drawable/curve_shape"
-        android:onClick="showscoreboard"/>
+        app:layout_constraintHorizontal_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
