--- a/app/src/main/res/layout/settings_dialog.xml
+++ b/app/src/main/res/layout/settings_dialog.xml
@@ -26,9 +26,9 @@
         android:layout_marginLeft="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        app:layout_constraintVertical_bias="0.07"
+        app:layout_constraintVertical_bias="0.16000003"
         android:layout_width="109dp"
-        app:layout_constraintHorizontal_bias="0.25" />
+        app:layout_constraintHorizontal_bias="0.0" />
 
     <Switch
         android:key="soundfx"
@@ -39,17 +39,16 @@
         android:layout_height="65dp"
         android:layout_width="60dp"
         android:id="@+id/music"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/display_name"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        app:layout_constraintVertical_bias="0.2"
+        app:layout_constraintVertical_bias="0.57"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp" />
+        android:layout_marginRight="16dp"
+        app:layout_constraintTop_toTopOf="@+id/avatar" />
     <SeekBar
         android:defaultValue="100"
         android:title="Volume"
@@ -149,32 +148,21 @@
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
-        android:layout_width="105dp"
-        android:layout_height="80dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.88" />
-
-    <Button
-        android:id="@+id/show_achievements"
-        android:layout_width="105dp"
-        android:layout_height="80dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.88"
-        android:visibility="gone"
-        android:text="Achievements" />
+        app:layout_constraintVertical_bias="0.13"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_width="180dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/display_name"
+        android:layout_marginLeft="8dp"
+        android:layout_height="34dp" />
 
     <ImageView
         android:id="@+id/avatar"
-        android:layout_width="105dp"
-        android:layout_height="80dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -182,6 +170,20 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.88"
         android:visibility="gone"/>
+
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_button"
+        android:layout_height="26dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/display_name"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintRight_toRightOf="@+id/avatar"
+        app:layout_constraintBottom_toTopOf="@+id/musicSeekbar"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintVertical_bias="0.72"
+        android:layout_width="180dp" />
 
 
 </android.support.constraint.ConstraintLayout>
